# felt

./: .env.example  .gitignore  Procfile  README.md  authorize.py  pyproject.toml
src/felt/: __init__.py  config.py  db.py  ledger.py
src/felt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/felt/bot/: app.py  render.py
src/felt/games/: blackjack.py  cards.py  slots.py
src/felt/venmo/: __init__.py  parser.py  watcher.py
tests/: test_blackjack.py  test_money_and_render.py  test_parser.py  test_slots.py
tests/fixtures/: venmo_received.eml
