[project]
name = "felt"
version = "0.1.0"
description = "Points-based Telegram card room: blackjack (vs bot dealer) + Texas Hold'em, funded by Venmo email deposits."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21,<22",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
felt-bot = "felt.bot.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
